rest:update: candidate payload and  swagger docs
